--- a/Amazon Prime/Cube.html
+++ b/Amazon Prime/Cube.html
@@ -824,7 +824,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i370.text.css:text/base/css*/
-#i370 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i370 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i370.i371.positioning.css:positioning/base/css.2*/
 #i370 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 263px; height: 49px;
         -ms-transform: translate(0, 0) translate(19px, 183px) rotate(0deg);
@@ -915,7 +915,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡Series y películas sin límites!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/EgFRhbB.png"/>
+<img id="i130" src="https://i.imgur.com/uMkKcdg.png"/>
 <!--#/#--><!--#i4.i426.button.html:button/html-->
 <button id="i426">Ver ahora en PrimeVideo.com</button>
 <!--#/#--><!--#i4.i398.image.html:image/html-->
@@ -937,7 +937,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i366.text.html:text/html-->
 <div id="i366">Disfruta The Tick, American Gods, The Grand Tour y muchos más donde y cuando quieras.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/JYHuZfd.gif"/>
+<img id="i58" src="https://i.imgur.com/3O3VvxH.png"/>
 <!--#/#--><!--#i5.i372.image.html:image/html-->
 <img id="i372" src="https://i.imgur.com/r9UZjAp.png"/>
 <!--#/#--><!--#i5.i430.button.html:button/html-->
@@ -957,9 +957,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/HNtzEY2.png"/>
+<img id="i60" src="https://i.imgur.com/fezcPpF.png"/>
 <!--#/#--><!--#i6.i370.text.html:text/html-->
-<div id="i370">Y además envíos gratis en 1 ó 2 días en productos enviados por AMAZON.</div>
+<div id="i370">No te pierdas ni un solo episodio de tus series favoritas.</div>
 <!--#/#--><!--#i6.i432.button.html:button/html-->
 <button id="i432">Ver ahora en PrimeVideo.com</button>
 <!--#/#--><!--#i6.i400.image.html:image/html-->
@@ -1023,7 +1023,7 @@ bmShow('i398');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i406.image.js:image/base/js*/
@@ -1036,7 +1036,7 @@ var el = document.getElementById('i406');
 
 el.addEventListener('click', function(e){
     /*#i408.i409.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1053,7 +1053,7 @@ var el = document.getElementById('i414');
 
 el.addEventListener('click', function(e){
     /*#i416.i417.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1070,7 +1070,7 @@ var el = document.getElementById('i422');
 
 el.addEventListener('click', function(e){
     /*#i424.i425.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1094,7 +1094,7 @@ bmShow('i430');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i402.image.js:image/base/js*/
@@ -1107,7 +1107,7 @@ var el = document.getElementById('i402');
 
 el.addEventListener('click', function(e){
     /*#i404.i405.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1124,7 +1124,7 @@ var el = document.getElementById('i410');
 
 el.addEventListener('click', function(e){
     /*#i412.i413.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1141,7 +1141,7 @@ var el = document.getElementById('i418');
 
 el.addEventListener('click', function(e){
     /*#i420.i421.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1167,7 +1167,7 @@ bmShow('i400');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i340.image.js:image/base/js*/
@@ -1180,7 +1180,7 @@ var el = document.getElementById('i340');
 
 el.addEventListener('click', function(e){
     /*#i342.i343.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1197,7 +1197,7 @@ var el = document.getElementById('i348');
 
 el.addEventListener('click', function(e){
     /*#i350.i351.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1214,7 +1214,7 @@ var el = document.getElementById('i356');
 
 el.addEventListener('click', function(e){
     /*#i358.i359.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com/gp/video/offers?tag=seasonswatch-dt-8010-20&'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
