--- a/Amazon Prime/Cube.html
+++ b/Amazon Prime/Cube.html
@@ -935,7 +935,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i366.text.html:text/html-->
-<div id="i366">Disfruta The Tick, American Gods, The Grand Tour y muchos más donde y cuando quieras.</div>
+<div id="i366">Disfruta The Tick, American Gods, The Grand Tour y muchos más dónde y cuándo quieras.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/3O3VvxH.png"/>
 <!--#/#--><!--#i5.i372.image.html:image/html-->
