--- a/NELSON VARGAS/formulario-def.html
+++ b/NELSON VARGAS/formulario-def.html
@@ -253,7 +253,7 @@
 
         
             <div class="screen1" style="margin-left:0px; margin-top:0px; cursor: pointer;">
-                 <article type="text/html" data="FadeBig.html" width="300" height="600" ></article></div>
+                 <object type="text/html" data="FadeBig.html" width="300" height="600" ></object></div>
 
 
 
