--- a/Toyota vallejo/formulario_toyota.html
+++ b/Toyota vallejo/formulario_toyota.html
@@ -640,7 +640,7 @@
             <div class="FR red">
                 <center>
                 <span class="s-I" style="width: 300px; margin-left: -30px;"> 
-                    <img src="https://i.imgur.com/EAbh6Z8.gif" style="height:170px;  text-decoration: none; border-radius:0px;
+                    <img src="https://i.imgur.com/udu1Dtb.gif" style="height:170px;  text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff; margin-top: 0px;"></span>
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: -40px;">
