--- a/Toyota vallejo/formulario_toyota.html
+++ b/Toyota vallejo/formulario_toyota.html
@@ -617,9 +617,9 @@
                     
 
                     <!--<h2>CONTÁCTANOS</h2>-->
-                    <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="* NOMBRE COMPLETO:" name="name" type="text"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="NOMBRE COMPLETO:" name="name" type="text"></p>
    
-                    <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="* CORREO:" name="name" type="text"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="CORREO:" name="name" type="text"></p>
                     <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="TELÉFONO:" name="name" type="text"></p>
                    <p style="width: 100%; text-align: left; margin-bottom: 10px;"  ><input placeholder="TIPO DE CHOCHE"/></p>
                   
