--- a/Toyota vallejo/formulario_toyota.html
+++ b/Toyota vallejo/formulario_toyota.html
@@ -621,7 +621,7 @@
    
                     <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="CORREO:" name="name" type="text"></p>
                     <p style="width: 100%; text-align: left; margin-bottom: 10px;" ><input placeholder="TELÉFONO:" name="name" type="text"></p>
-                   <p style="width: 100%; text-align: left; margin-bottom: 10px;"  ><input placeholder="TIPO DE CHOCHE"/></p>
+                   <p style="width: 100%; text-align: left; margin-bottom: 10px;"  ><input placeholder="CHOCHE"/></p>
                   
 
                     <span style="display: flex; flex-direction: row-reverse; justify-content: space-between; width: 100%; margin-top: 15px">
