--- a/VÍA SANTA FE DTS/cube_300x250.html
+++ b/VÍA SANTA FE DTS/cube_300x250.html
@@ -321,7 +321,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/cRrkMHT.jpg"/>
+<img id="i60" src="https://i.imgur.com/APrcBXt.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i19.cube-panel.html:cube-panel/html.1-->
@@ -329,7 +329,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i64.image.html:image/html-->
-<img id="i64" src="https://i.imgur.com/kcwlEH2.jpg"/>
+<img id="i64" src="https://i.imgur.com/0oG970c.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i30.cube-panel.html:cube-panel/html.1-->
@@ -337,7 +337,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i30.i31.shape.html:shape/html-->
 <div id="i31"></div>
 <!--#/#--><!--#i30.i68.image.html:image/html-->
-<img id="i68" src="https://i.imgur.com/roVBZd5.jpg"/>
+<img id="i68" src="https://i.imgur.com/yzBrFkL.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i41.cube-panel.html:cube-panel/html.1-->
@@ -366,7 +366,7 @@ var cube_i4 = new Adform.FlexGallery({
     animationDuration: '0.8',
     autoAnimationEnabled: 'true',
     autoAnimationDelay: '2.2',
-    autoAnimationTime: '28',
+    autoAnimationTime: '200',
     defaultButtons: 'false',
     panelButtons: 'true',
     buttonsDirection: 'horizontal',
@@ -530,7 +530,7 @@ family: Source Sans Pro;
 /*#/#*//*#i4.cube.meta:cube/meta.4*/
 name: Cube;
 customName: 1;
-data: /*!*/{"mode":"simple"}/*!*/;
+data: /*!*/{"mode":"advanced"}/*!*/;
 /*#/#*//*#i4.i8.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 1;
 /*#/#*//*#i8.i9.shape.meta:shape/meta*/
@@ -538,7 +538,7 @@ name: Background;
 /*#/#*//*#i9.i10.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i60.image.meta:image/meta*/
-name: cRrkMHT.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: APrcBXt.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -549,7 +549,7 @@ name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i19.i64.image.meta:image/meta*/
-name: kcwlEH2.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 0oG970c.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i64.i65.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -560,7 +560,7 @@ name: Background;
 /*#/#*//*#i31.i32.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i30.i68.image.meta:image/meta*/
-name: roVBZd5.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: yzBrFkL.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
