--- a/VÍA SANTA FE DTS/fade_320x480.html
+++ b/VÍA SANTA FE DTS/fade_320x480.html
@@ -60,18 +60,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/2NkRcA0.jpg");
+            background: url("https://i.imgur.com/IwBam7J.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/RkaZWyb.jpg");
+            background: url("https://i.imgur.com/hSAZayp.jpg");
             background-size: cover;
      
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/ryj4lnZ.jpg");
+            background: url("https://i.imgur.com/CB4Culc.jpg");
             background-size: cover;
           
         }
