--- a/VÍA SANTA FE DTS/venetian_320x50.html
+++ b/VÍA SANTA FE DTS/venetian_320x50.html
@@ -2228,9 +2228,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i78.slice-image.html:slice-image/html.1-->
-<dataimg id="i78" src="https://i.imgur.com/Lfn2PNY.jpg"></dataimg>
+<dataimg id="i78" src="https://i.imgur.com/MvQ3mHI.jpg"></dataimg>
 <!--#/#--><!--#i2.i79.slice-image.html:slice-image/html.1-->
-<dataimg id="i79" src="https://i.imgur.com/fnmAhsy.jpg"></dataimg>
+<dataimg id="i79" src="https://i.imgur.com/CucrbA0.jpg"></dataimg>
 <!--#/#--><!--#i2.i80.slice-image.html:slice-image/html.1-->
 <dataimg id="i80" src="https://i.imgur.com/5vUVfzn.jpg"></dataimg>
 <!--#/#-->
@@ -2369,10 +2369,10 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i78.slice-image.meta:slice-image/meta.1*/
-name: Lfn2PNY.jpg; fileId: ; sourceTypeId: externalUrl;
+name: MvQ3mHI.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i79.slice-image.meta:slice-image/meta.1*/
-name: fnmAhsy.jpg; fileId: ; sourceTypeId: externalUrl;
+name: CucrbA0.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i80.slice-image.meta:slice-image/meta.1*/
 name: 5vUVfzn.jpg; fileId: ; sourceTypeId: externalUrl;
