--- a/VÍA SANTA FE DTS/cube_300x250.html
+++ b/VÍA SANTA FE DTS/cube_300x250.html
@@ -244,6 +244,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i8.i78.shape.css:shape/base/css*/
+#i78 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i78.i79.positioning.css:positioning/base/css.2*/
+#i78 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
 /*#/#*//*#i19.i20.shape.css:shape/base/css*/
 #i20 { background-color: #0A82BE; opacity: 1;
 }
@@ -258,6 +268,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i64 { opacity: 1; }
 /*#/#*//*#i64.i65.positioning.css:positioning/base/css.2*/
 #i64 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 250px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i19.i82.shape.css:shape/base/css*/
+#i82 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i82.i83.positioning.css:positioning/base/css.2*/
+#i82 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -282,6 +302,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i30.i86.shape.css:shape/base/css*/
+#i86 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i86.i87.positioning.css:positioning/base/css.2*/
+#i86 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
 /*#/#*//*#i41.i42.shape.css:shape/base/css*/
 #i42 { background-color: #0A82BE; opacity: 1;
 }
@@ -300,6 +330,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i41.i90.shape.css:shape/base/css*/
+#i90 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i90.i91.positioning.css:positioning/base/css.2*/
+#i90 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i4.i5.positioning.css:positioning/base/css.2*/
 #i4 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -322,6 +362,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i9"></div>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/APrcBXt.jpg"/>
+<!--#/#--><!--#i8.i78.shape.html:shape/html-->
+<div id="i78"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i19.cube-panel.html:cube-panel/html.1-->
@@ -330,6 +372,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i20"></div>
 <!--#/#--><!--#i19.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/0oG970c.jpg"/>
+<!--#/#--><!--#i19.i82.shape.html:shape/html-->
+<div id="i82"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i30.cube-panel.html:cube-panel/html.1-->
@@ -338,6 +382,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i31"></div>
 <!--#/#--><!--#i30.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/yzBrFkL.jpg"/>
+<!--#/#--><!--#i30.i86.shape.html:shape/html-->
+<div id="i86"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i41.cube-panel.html:cube-panel/html.1-->
@@ -346,6 +392,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i42"></div>
 <!--#/#--><!--#i41.i72.image.html:image/html-->
 <img id="i72" src="https://i.imgur.com/8UHsVW7.jpg"/>
+<!--#/#--><!--#i41.i90.shape.html:shape/html-->
+<div id="i90"></div>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -366,7 +414,7 @@ var cube_i4 = new Adform.FlexGallery({
     animationDuration: '0.8',
     autoAnimationEnabled: 'true',
     autoAnimationDelay: '2.2',
-    autoAnimationTime: '200',
+    autoAnimationTime: '999',
     defaultButtons: 'false',
     panelButtons: 'true',
     buttonsDirection: 'horizontal',
@@ -387,12 +435,14 @@ bmShow('i9');
 
 /*#/#*//*#i60.i61.positioning.js:positioning/base/js.2*/
 bmShow('i60');
-/*#/#*//*#i60.i62.actions.js:actions/base/js.1*/
+/*#/#*//*#i78.i79.positioning.js:positioning/base/js.2*/
+bmShow('i78');
+/*#/#*//*#i78.i80.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i60');
+var el = document.getElementById('i78');
 
 el.addEventListener('click', function(e){
-    /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i80.i81.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/hEwZHxSd4sXtZtxf6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -419,12 +469,14 @@ bmShow('i20');
 
 /*#/#*//*#i64.i65.positioning.js:positioning/base/js.2*/
 bmShow('i64');
-/*#/#*//*#i64.i66.actions.js:actions/base/js.1*/
+/*#/#*//*#i82.i83.positioning.js:positioning/base/js.2*/
+bmShow('i82');
+/*#/#*//*#i82.i84.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i64');
+var el = document.getElementById('i82');
 
 el.addEventListener('click', function(e){
-    /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i84.i85.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/hEwZHxSd4sXtZtxf6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -451,12 +503,14 @@ bmShow('i31');
 
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i70.actions.js:actions/base/js.1*/
+/*#/#*//*#i86.i87.positioning.js:positioning/base/js.2*/
+bmShow('i86');
+/*#/#*//*#i86.i88.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i68');
+var el = document.getElementById('i86');
 
 el.addEventListener('click', function(e){
-    /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i88.i89.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/hEwZHxSd4sXtZtxf6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -483,12 +537,14 @@ bmShow('i42');
 
 /*#/#*//*#i72.i73.positioning.js:positioning/base/js.2*/
 bmShow('i72');
-/*#/#*//*#i72.i74.actions.js:actions/base/js.1*/
+/*#/#*//*#i90.i91.positioning.js:positioning/base/js.2*/
+bmShow('i90');
+/*#/#*//*#i90.i92.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i72');
+var el = document.getElementById('i90');
 
 el.addEventListener('click', function(e){
-    /*#i74.i75.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i92.i93.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/hEwZHxSd4sXtZtxf6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -542,6 +598,10 @@ name: APrcBXt.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i8.i78.shape.meta:shape/meta*/
+name: Shape 1;
+/*#/#*//*#i78.i79.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i19.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 2;
 /*#/#*//*#i19.i20.shape.meta:shape/meta*/
@@ -553,6 +613,10 @@ name: 0oG970c.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i64.i65.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i19.i82.shape.meta:shape/meta*/
+name: Shape 1;
+/*#/#*//*#i82.i83.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i30.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 3;
 /*#/#*//*#i30.i31.shape.meta:shape/meta*/
@@ -564,6 +628,10 @@ name: yzBrFkL.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i30.i86.shape.meta:shape/meta*/
+name: Shape 1;
+/*#/#*//*#i86.i87.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i41.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 4;
 /*#/#*//*#i41.i42.shape.meta:shape/meta*/
@@ -575,6 +643,10 @@ name: 8UHsVW7.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i72.i73.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i41.i90.shape.meta:shape/meta*/
+name: Shape 1;
+/*#/#*//*#i90.i91.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i5.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
