--- a/HEMSA/fade-small.html
+++ b/HEMSA/fade-small.html
@@ -83,7 +83,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/5ErpSH0.jpg)
+            background-image: url(https://i.imgur.com/Yy9PZ1f.jpg)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
