--- a/VÍA SANTA FE DTS/cube_300x250.html
+++ b/VÍA SANTA FE DTS/cube_300x250.html
@@ -11,10 +11,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#head:common/head-->
 <!--#flexGallery.head:flexGallery/globalhead-->
 <script src="//s1.adform.net/banners/scripts/components/Adform.FlexGallery-1.js"></script>
-<!--#/#--><!--#i2.font-google.head:font/font-google/head-->
-<!--#i2.i3.font-google.head:font-google/head-->
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-<!--#/#-->
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
@@ -352,8 +348,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 </style>
 <!--#/#--></head>
 <body>
-<!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i2.font.html:font/html-->
-<!--#/#--><!--#i4.cube.html:cube/html.4-->
+<!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i4.cube.html:cube/html.4-->
 <div id="i4" class="adf-FlexGallery">
     <div class="adf-Shape">
         <!--#i4.i8.cube-panel.html:cube-panel/html.1-->
@@ -414,7 +409,7 @@ var cube_i4 = new Adform.FlexGallery({
     animationDuration: '0.8',
     autoAnimationEnabled: 'true',
     autoAnimationDelay: '2.2',
-    autoAnimationTime: '999',
+    autoAnimationTime: '9999',
     defaultButtons: 'false',
     panelButtons: 'true',
     buttonsDirection: 'horizontal',
@@ -579,11 +574,7 @@ function bmHide(id) {
 }
 /*#/#*/
 </script>
-<!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i2.font.meta:font/meta*/
-name: Web Font: Source Sans Pro; type: font-google; customName: ;
-/*#/#*//*#i2.i3.font-google.meta:font-google/meta*/
-family: Source Sans Pro;
-/*#/#*//*#i4.cube.meta:cube/meta.4*/
+<!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i4.cube.meta:cube/meta.4*/
 name: Cube;
 customName: 1;
 data: /*!*/{"mode":"advanced"}/*!*/;
