--- a/HEMSA/Venetian.html
+++ b/HEMSA/Venetian.html
@@ -2311,7 +2311,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¿Te vas a perder las promociones HOTSALE?</div>
 <!--#/#--><!--#i97.text.html:text/html-->
-<div id="i97">!Estamos a menos de 2 cuadras de tí !
+<div id="i97">!Estamos a menos de 2 cuadras de ti!
 
 Adjuntos</div>
 <!--#/#--><!--#i16.image.html:image/html-->
