--- a/HEMSA/fade-small.html
+++ b/HEMSA/fade-small.html
@@ -286,7 +286,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> ¿Donde encontrar las mejores opciones para equiparte?<br> </span>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> ¿Dónde encontrar las mejores opciones para equiparte?<br> </span>
                 </div>
 
             <!-- LOGO -->
