--- a/Hyundai-santafe/Venetian.html
+++ b/Hyundai-santafe/Venetian.html
@@ -2267,9 +2267,9 @@ plazas traseras?</div>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/fffw98q.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/8molMyU.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/bOPR3m6.jpg"></dataimg>
 <!--#/#--><!--#i2.i34.slice-image.html:slice-image/html.1-->
-<dataimg id="i34" src="https://i.imgur.com/z3kjt1t.jpg"></dataimg>
+<dataimg id="i34" src="https://i.imgur.com/8molMyU.jpg"></dataimg>
 <!--#/#--><!--#i2.i35.slice-image.html:slice-image/html.1-->
 <dataimg id="i35" src="https://i.imgur.com/fy8Fz59.jpg"></dataimg>
 <!--#/#-->
